fix security   06_09_2025